<resources>
    <string name="app_name">Project S</string>
    <string name="welcome">Welcome</string>
    <string name="staff">Staff</string>
    <string name="students">Students</string>
    <string name="characters">Characters</string>
    <string name="name">Name :</string>
    <string name="john_doe">John Doe</string>
    <string name="actor">Actor :</string>
    <string name="jane_smith">Jane Smith</string>
    <string name="dob">DOB :</string>
    <string name="_01_01_1990">01/01/1990</string>
    <string name="image">Image</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="species">Species :</string>
    <string name="human">Human</string>
    <string name="gender">Gender :</string>
    <string name="house">House :</string>
    <string name="wizard">Wizard :</string>
    <string name="hair_color">Hair Colour :</string>
    <string name="eye_colour">Eye Colour :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hogwarts_student">Hogwart\'s Student :</string>
    <string name="hogwarts_staff">Hogwart\'s Staff :</string>
    <string name="ancestry">Ancestry :</string>
    <string name="alive">Alive :</string>
    <string name="patronus">Patronus :</string>
    <string name="wand">Wand</string>
    <string name="wood">Wood :</string>
    <string name="core">Core :</string>
    <string name="length">Length :</string>
</resources>